add the snow back

--- a/app/assets/stylesheets/shared/_block.sass
+++ b/app/assets/stylesheets/shared/_block.sass
@@ -36,6 +36,9 @@
   &.-bg-default
     color: var(--black)
     background-color: var(--default)
+  &.-bg-white
+    color: var(--black)
+    background-color: var(--white)
   &.-bg-faint
     color: var(--black)
     background-color: var(--faint)
