--- a/app/views/gift_subscriptions/index.html.haml
+++ b/app/views/gift_subscriptions/index.html.haml
@@ -3,8 +3,9 @@
 .block.-pt4.-px2.-bg-christmas
   .p.-centered
     .block.-pt2
-      %h1.h.-h1.c.-serif Give the gift of local journalism
-      .block.-mt2.p.-t3 A gift subscription to the Dublin Inquirer is perfect for the inquisitive Dubliner in your life
+      .p.-centered
+        %h1.h.-h1.c.-serif Give the gift of local journalism
+        .block.-mt2.p.-t3 A gift subscription to the Dublin Inquirer is perfect for the inquisitive Dubliner in your life
 
   .block.-mt4.-pull-down
     .wrapper.-large{role: 'layout'}
