--- a/app/views/layouts/partials/_primary-footer.html.haml
+++ b/app/views/layouts/partials/_primary-footer.html.haml
@@ -33,6 +33,9 @@
                 = link_to "Erin McGuire", "/contributors/erin-mcguire"
                 <br>
                 = link_to "Laoise Neylon", "/contributors/laoise-neylon"
+              %p
+                %big.c.-w4 Web
+                = link_to "Brian Flanagan", "/contributors/brian-flanagan"
 
         .col-xs-12.col-md-3
           .block.-mb4
