--- a/app/assets/stylesheets/shared/_button.sass
+++ b/app/assets/stylesheets/shared/_button.sass
@@ -72,17 +72,20 @@
       color: var(--blue)
 
   &.-christmas
-    display: block
     position: relative
     background: var(--white)
+    padding: 0.575rem 1rem
     color: var(--black)
-    border: 1px solid var(--black)
-    padding: 1.5rem 3rem
+    border-radius: 0.175rem
     font-weight: 600
     box-shadow: 0 0.25rem 1rem rgba(#000,0.125)
     transition: all ease 0.25s
     &:hover
       transform: translateY(0.125rem)
+    
+    &.-big
+      display: block
+      padding: 1.5rem 3rem
 
 .text-button
   -webkit-appearance: none
