--- a/app/views/gift_subscriptions/christmas.html.haml
+++ b/app/views/gift_subscriptions/christmas.html.haml
@@ -1,14 +1,15 @@
 - set_meta_tags title: "Become a subscriber"
 
-.block.-pt4.-px2.-bg-christmas
+.block.-py4.-px2.-bg-christmas{'data-behaviour': 'snowing'}
   .p.-centered
     .block.-pt2
       .row
         .col-xs-12.col-md-8.col-md-offset-2
           %h1.h.-h2.c.-serif Give the gift of local journalism
-          .block.-mt2.p.-t3 A gift subscription to the Dublin Inquirer is perfect for the inquisitive Dubliner in your life
+          .block.-mt2.p.-t4
+            If you order by 17 December, we'll send you a little card so you have something to put under the tree, and if you choose a print subscription, we'll include an issue of the paper to add to that gift package. And then, for the rest of the year, we'll deliver quality, original local journalism.
 
-  .block.-mt4.-pull-down
+  .block.-mt4
     .wrapper.-large{role: 'layout'}
       .row
         .col-xs-12.col-md-6.flex
@@ -36,17 +37,9 @@
                 = link_to raw("Half year &mdash; €48"), gift_subscription_path(id: 'print-half'), class: 'button -standard -big'
 
 .block.-bt.-bg-default.-py4
-  .block.-my4.-pt4
-    .wrapper.-small{role: 'layout'}
-      .block.-mb1
-        %h3.h.-h3.-centered Christmas
-      .p.-t3.-centered
-        :markdown
-          Dublin Inquirer is funded by its subscribers. That way, we can stay independent, and focused on the stories that readers want and need – and stories that make a big impact on the city:
-
   .block.-my4.-py4
     .p.-t4.-sf.-centered
       :markdown
         **Questions?**
 
-        If you have any questions or special requests, you can reach us at: <a href="mailto:info@dublininquirer.com">info@dublininquirer.com</a>.
+        If you have any questions or special requests, you can reach us at <a href="mailto:info@dublininquirer.com">info@dublininquirer.com</a>.
