--- a/app/views/home/imprint.html.haml
+++ b/app/views/home/imprint.html.haml
@@ -23,6 +23,10 @@
             %p #{ link_to reporter.full_name, reporter }
 
         .block.-my2
+          %h4.h.-h4 Web
+          %p #{ link_to @staff[:tech].full_name, @staff[:tech] }
+
+        .block.-my2
           %h4.h.-h4 Columnists
           - @columnists.each do |author|
             %p #{ link_to author.full_name, author }
