--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -25,7 +25,7 @@
 
   %body
     .wrapper.-container{role: 'layout'}
-      = render partial: 'layouts/meta-nav', locals: { omnipresent: true, fixed: true, small: false, brief: true }
+      = render partial: 'layouts/partials/meta-nav', locals: { omnipresent: true, fixed: true, small: false, brief: true }
 
       .sub-omnipresent
         = yield
