--- a/app/assets/stylesheets/incidental/_christmas-ad.sass
+++ b/app/assets/stylesheets/incidental/_christmas-ad.sass
@@ -20,7 +20,6 @@
   justify-content: center
   align-items: center
   padding: 4rem
-  min-height: 60vh
   position: relative
 
   .snowing-bg
@@ -38,9 +37,14 @@
 
     .info
       text-align: center
-      max-width: 48rem
-
-      p
-        padding: 0 5%
     
     .actions
+
+  @media screen and (min-width: $large)
+    min-height: 60vh
+    .content
+      .info
+        max-width: 48rem
+
+        p
+          padding: 0 5%
