probably less padding necessary

--- a/app/views/gift_subscriptions/christmas.html.haml
+++ b/app/views/gift_subscriptions/christmas.html.haml
@@ -37,7 +37,7 @@
                 = link_to raw("Half year &mdash; €48"), gift_subscription_path(id: 'print-half'), class: 'button -standard -big block'
 
 .block.-bt.-bg-default.-py4
-  .block.-my4.-py4
+  .block.-my4
     .p.-t4.-sf.-centered
       :markdown
         **Questions?**
