imprint cache fix

--- a/app/views/products/_christmas.html.haml
+++ b/app/views/products/_christmas.html.haml
@@ -3,7 +3,7 @@
     .info.block.-mb2
       .block.-mb2
         .h.-h2.c.-serif The perfect gift for the inquisitive Dubliner
-      %p Give the gift of quality local journalism with a<br> <strong>Dublin Inquirer gift subscription</strong>.
+      %p Give the gift of quality local journalism with a <strong>Dublin Inquirer gift subscription</strong>.
 
     .actions
       = link_to "Give a gift subscription", :gift_subscriptions, class: 'button -christmas -big'
