add particles.js to more layouts ... hacky

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,8 @@
     = csp_meta_tag
     = stylesheet_link_tag 'audio', media: 'all'
     = stylesheet_link_tag 'application', media: 'all'
+
+    <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     = javascript_include_tag 'application'
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
