--- a/app/views/layouts/partials/_primary-flag.html.haml
+++ b/app/views/layouts/partials/_primary-flag.html.haml
@@ -28,7 +28,7 @@
                 .field
                   %input{name: 'email', type: 'email', placeholder: 'Enter your email'}
                 .action
-                  %input{type: 'submit', value: 'Subscribe', class: 'text-button'}
+                  %input{type: 'submit', value: 'Sign up', class: 'text-button'}
 
     .block.-hr
       = render partial: 'layouts/partials/content-nav'
