--- a/app/assets/stylesheets/components/_block-form.sass
+++ b/app/assets/stylesheets/components/_block-form.sass
@@ -69,6 +69,13 @@
       resize: none
       font-size: var(--t3)
 
+    &.-referral
+      height: 0
+      overflow: hidden
+      border: 0
+      padding: 0
+      margin: 0
+
     &.-select
       padding: 3rem 0 1rem
       select
