--- a/app/assets/stylesheets/components/_block-form.sass
+++ b/app/assets/stylesheets/components/_block-form.sass
@@ -75,6 +75,8 @@
       border: 0
       padding: 0
       margin: 0
+      background-color: transparent
+      width: 100%
 
     &.-select
       padding: 3rem 0 1rem
