put donal on the site

--- a/app/views/layouts/partials/_primary-footer.html.haml
+++ b/app/views/layouts/partials/_primary-footer.html.haml
@@ -28,11 +28,11 @@
                 = link_to "Sam Tranum", "/contributors/sam-tranum"
               %p
                 %big.c.-w4 City reporters
-                = link_to "Sean Finnan", "/contributors/sean-finnan"
-                <br>
                 = link_to "Erin McGuire", "/contributors/erin-mcguire"
                 <br>
                 = link_to "Laoise Neylon", "/contributors/laoise-neylon"
+                <br>
+                = link_to "Donal Corrigan", "/contributors/donal-corrigan"
               %p
                 %big.c.-w4 Web
                 = link_to "Brian Flanagan", "/contributors/brian-flanagan"
