add layout for covid directory

--- a/app/views/projects/election_surveys/layouts/elections.html.haml
+++ b/app/views/projects/election_surveys/layouts/elections.html.haml
@@ -42,6 +42,6 @@
         .wrapper.-small{role: 'layout'}
           .p.-centered.-t4.-sf.-mono
             :markdown
-              This is a project by<a href="https://www.dublininquirer.com" data-turbolinks="false">Dublin Inquirer</a>, a reader-funded local newspaper covering Ireland's capital. You can support local journalism by <a href="https://www.dublininquirer.com/subscribe" data-turbolinks="false">becoming a Dublin Inquirer subscriber</a>.
+              This is a project by <a href="https://www.dublininquirer.com" data-turbolinks="false">Dublin Inquirer</a>, a reader-funded local newspaper covering Ireland's capital, and <a href="https://www.civictech.ie" data-turbolinks="false">CivicTech·ie</a>. You can support local journalism by <a href="https://www.dublininquirer.com/subscribe" data-turbolinks="false">becoming a Dublin Inquirer subscriber</a>.
 
     = render partial: 'layouts/snippets/analytics'
