--- a/app/views/projects/neighbours/layouts/neighbours.html.haml
+++ b/app/views/projects/neighbours/layouts/neighbours.html.haml
@@ -39,7 +39,7 @@
       .cta
         = link_to "Submit a service", [:new, :projects, :neighbours, :service], class: 'button -white'
     
-    %main.main.-elections.-neighbours.block.-pt2.-pb4
+    %main.main.-elections.-neighbours.block.-pb4
       = yield
     
     .submit-overlay
