--- a/app/views/projects/neighbours/services/index.html.haml
+++ b/app/views/projects/neighbours/services/index.html.haml
@@ -1,14 +1,33 @@
-.filters
-  %form
-    %label Filter
-    %select
-      %option By area
-      - @areas.each do |area|
-        %option{value: area, selected: area == @scope['area']}= area
-    %select
-      %option By service
-      - @categories.each do |category|
-        %option{value: category, selected: category == @scope['category']}= category
+.block.-pt4.-pb2.-px2.-bg-blue
+  .row
+    .col-xs-12.col-md-9
+      %h1.h.-h2
+        Services
+        - if @scope[:area].present?
+          in #{ @scope[:area].capitalize }
+        - if @scope.values.compact.size == 2
+          and
+        - if @scope[:category].present?
+          matching &ldquo;#{ @scope[:category] }&rdquo;
+
+      .p.-t4.block.-mt1
+        - if @scope.values.compact.any?
+          #{ pluralize @services.count, 'service' } match these filters
+    .col-xs-12.col-md-3.flex
+      .switcher
+        %label By area
+        %select
+          %option By area
+          <option disabled>──────────</option>
+          - @areas.each do |area|
+            %option{value: area, selected: area == @scope['area']}= area
+      .switcher
+        %label By service
+        %select
+          %option By service
+          <option disabled>──────────</option>
+          - @categories.each do |category|
+            %option{value: category, selected: category == @scope['category']}= category
 
 .block.-pt4
   .wrapper.-container{role: 'layout'}
