fix styles for anchor links

--- a/app/views/projects/neighbours/services/_service.html.haml
+++ b/app/views/projects/neighbours/services/_service.html.haml
@@ -10,19 +10,19 @@
     - if address_lines.any?
       .address
         %label Address
-        = simple_format address_lines.compact.join(', ')
+        %span= simple_format address_lines.compact.join(', ')
 
     - if service['areas']&.any?
       .areas
         %label Areas
         - service['areas'].each do |area|
-          = link_to area, projects_neighbours_services_path(area: area)
+          %span= link_to area, projects_neighbours_services_path(area: area)
     
     - if service['categories']&.any?
       .categories
         %label Categories
         - service['categories'].each do |category|
-          = link_to category, projects_neighbours_services_path(category: category)
+          %span= link_to category, projects_neighbours_services_path(category: category)
     
     .contact
       %label Contact
