--- a/app/assets/stylesheets/neighbours.sass
+++ b/app/assets/stylesheets/neighbours.sass
@@ -56,7 +56,7 @@
   @media screen and (min-width: $medium)
     display: none
 
-.filters
+.filter
   top: 0
   position: sticky
   position: -webkit-sticky
@@ -107,7 +107,7 @@
       label
         display: block
       
-      span, a
+      span
         &:after
           content: ', '
         &:last-child
